--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "MIT",
   "main": "monapp.js",
   "scripts": {
-    "start": "node monapp.js"
+    "start": "node monapp.js",
+	"deploy": "npm run build&&gh-pages -d build",
+	"build": "node"
+
+
   },
   "keywords": [
     "nodejs",
