--- a/package.json
+++ b/package.json
@@ -11,18 +11,30 @@
   "license": "MIT",
   "main": "monapp.js",
   "scripts": {
-    "start": "node monapp.js",
-	"deploy": "npm run build&&gh-pages -d build",
-	"build": "node"
-
-
+        "all": "run-s lint build",
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --content-base=public --open",
+    "lint": "eslint .",
+    "start": "run-s dev"
   },
   "keywords": [
-    "nodejs",
-    "bootstrap",
-    "express"
+    "nodejs"
   ],
+  "devDependencies": {
+    "copy-webpack-plugin": "^4.6.0",
+    "eslint": "^5.0.1",
+    "eslint-plugin-bpmn-io": "^0.5.3",
+    "npm-run-all": "^4.1.3",
+    "raw-loader": "^0.5.1",
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.14"
+  },
   "dependencies": {
-    "express": "^4.16.4"
+    "bpmn-js": "^7.3.0",
+    "diagram-js": "^5.0.0",
+	 "express": "^4.16.4",
+    "jquery": "^3.3.1"
   }
+
 }
